# rust-text-analysis

./: .gitignore  README.md
text_analysis/: Cargo.toml  Dockerfile  README.md
text_analysis/batch/: run_make_dataset.py
text_analysis/src/: main.rs
